--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -19,7 +19,7 @@ workflows:
     scripts:
       - name: Install CocoaPods dependencies
         script: | 
-          pod init && pod install
+          pod install
       - name: Set up provisioning profiles settings on Xcode project
         script: xcode-project use-profiles
       - name: Increment build number
