--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -24,13 +24,13 @@ workflows:
         script: xcode-project use-profiles
       - name: Increment build number
         script: | 
-          cd build/jsb-l21ink/frameworks/runtime-src/proj.ios_mac
+          cd build/jsb-link/frameworks/runtime-src/proj.ios_mac
           LATEST_BUILD_NUMBER=$(app-store-connect get-latest-app-store-build-number "$APP_STORE_APPLE_ID")
           agvtool new-version -all $(($LATEST_BUILD_NUMBER + 1))
       - name: Build ipa for distribution
         script: | 
           xcode-project build-ipa \
-            --workspace "$CM_BUILD_DIR/$XCODE_WORKSPACE" \
+            --project "hello_world.xcodeproj"
             --scheme "$XCODE_SCHEME"
     artifacts:
       - build/ios/ipa/*.ipa
