--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -15,7 +15,7 @@ workflows:
         XCODE_SCHEME: "hello_world-mobile"
         APP_STORE_APPLE_ID: 6504336292
       xcode: latest # <-- set to specific version e.g. 14.3, 15.0 to avoid unexpected updates.
-      cocoapods: link
+      cocoapods: default
     scripts:
       - name: Install CocoaPods dependencies
         script: | 
