--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -11,7 +11,7 @@ workflows:
         bundle_identifier: com.jkvqpfdx.pksdnw
       vars:
         BUNDLE_ID: "com.jkvqpfdx.pksdnw"
-        XCODE_WORKSPACE: "project.xcworkspace"
+        XCODE_WORKSPACE: "hello_world.xcworkspace"
         XCODE_SCHEME: "hello_world-mobile"
         APP_STORE_APPLE_ID: 6504336292
       xcode: latest # <-- set to specific version e.g. 14.3, 15.0 to avoid unexpected updates.
